--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "expo": "~52.0.31",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "react-native-leaflet-maps": "^0.2.1",
+    "react-native-leaflet-view": "^0.1.2",
+    "react-native-maps": "1.18.0",
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
