--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@types/geojson": "^7946.0.16",
     "expo": "~52.0.31",
+    "expo-location": "~18.0.6",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-leaflet-maps": "^0.2.1",
     "react-native-leaflet-view": "^0.1.2",
     "react-native-maps": "1.18.0",
+    "react-native-paper": "^5.13.1",
     "react-native-webview": "13.12.5"
   },
   "devDependencies": {
